--- a/tsconfig.electron.json
+++ b/tsconfig.electron.json
@@ -6,7 +6,7 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": false,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "allowJs": true,
@@ -14,10 +14,10 @@
     "rootDir": "./src",
     "sourceMap": true,
     "resolveJsonModule": true,
-    "noImplicitAny": false,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "types": ["node", "electron"]
+    "noImplicitAny": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "types": ["node"]
   },
   "include": ["src/electron/**/*", "src/types/**/*"],
   "exclude": ["node_modules", "dist"]
