--- a/package.json
+++ b/package.json
@@ -48,5 +48,11 @@
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4",
     "wait-on": "^8.0.4"
+  },
+  "overrides": {
+    "rimraf": "^5.0.0",
+    "glob": "^10.0.0",
+    "inflight": "npm:@humanwhocodes/inflight@^1.0.1",
+    "boolean": "^3.2.0"
   }
 }
