--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,24 @@ dist
 dist-ssr
 *.local
 
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build artifacts and releases
+release/
+out/
+build/
+
+# Security sensitive files
+*.pem
+*.key
+*.crt
+secrets.json
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -23,4 +41,4 @@ dist-ssr
 *.sln
 *.sw?
 CPlan.md
-WTFPL_RESOLUTION.md
+WTFPL_RESOLUTION.mdrelease/
